...
            android:minHeight="80dp"
            android:text="@string/but_start"
            android:layout_alignParentBottom="true"
            style="@style/PrimaryRoundedButton"/>

        <at.priv.graf.zazentimer.fragments.MaxHeightRecyclerView
            android:id="@+id/recycler_sessions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_above="@+id/but_start"
            android:layout_alignParentTop="false"
            android:layout_centerHorizontal="false"/>
...
