...
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginEnd="20dp"
            android:text="@string/label_session_name"
            android:labelFor="@id/text_session_name"/>
        <EditText
            android:id="@+id/text_session_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
...
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginEnd="20dp"
            android:text="@string/label_session_description"
            android:layout_below="@+id/text_session_name"
            android:labelFor="@id/text_session_description"/>
        <EditText
            android:id="@+id/text_session_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
...
